#-------------------------------------------------------------------------------------------
# Copyright (C) Skynet.  All rights reserved.
#-------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.1)
project(SKYNET CXX)

#-------------------------------------------------------------------------------------------
# Sub-projects
#-------------------------------------------------------------------------------------------
add_subdirectory(test)

#-------------------------------------------------------------------------------------------
# Library definition
#-------------------------------------------------------------------------------------------
file(GLOB SKYNET_SOURCES "src/*.cpp" "include/*.h")
add_library(SKYNET ${SKYNET_SOURCES} src/sock/sock.cpp)

#-------------------------------------------------------------------------------------------
# Compiler Flags
#-------------------------------------------------------------------------------------------
set_target_properties(SKYNET PROPERTIES LINKER_LANGUAGE CXX)
set_property(TARGET SKYNET PROPERTY CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#-------------------------------------------------------------------------------------------
# Include dirs
#-------------------------------------------------------------------------------------------
target_include_directories(SKYNET PUBLIC include)

#-------------------------------------------------------------------------------------------
# Libraries
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Installation
#-------------------------------------------------------------------------------------------
install(TARGETS SKYNET DESTINATION lib)
install(DIRECTORY include DESTINATION include)
